fixed horizontal scroll in mobile view

--- a/src/assets/styles/partials/_tabs.scss
+++ b/src/assets/styles/partials/_tabs.scss
@@ -63,7 +63,7 @@
     z-index: 5;
     color: #333;
     height: 20rem;
-    width: 120%;
+    width: 100%;
     margin: 0;
 }
 
